--- a/tracks/index.html
+++ b/tracks/index.html
@@ -8,36 +8,36 @@
         height: 100%
     }
     body {
-        height: 100%;
-        margin: 0;
-        padding: 0;
 		border: 0;
 		font-family: sans-serif;
 		font-size: small;
+        height: 100%;
+        margin: 0;
+        padding: 0;
     }
     #map_canvas {
-        height: 100%;
 		cursor: default;
+        height: 100%;
     }
     #map_panel {
-        position: absolute;
-        bottom: 3px;
-        left: 3px;
-        z-index: 10;
-        border: 1px solid #777;
         background: white;
+        border: 1px solid #777;
+        bottom: 3px;
         height: 240px;
-        width: 454px;
+        left: 3px;
 		padding: 15px;
+        position: absolute;
+        width: 454px;
+        z-index: 10;
     }
     #map_controls {
-        width: 50%;
         float: right;
 		text-align: right;
+        width: 50%;
     }
     #map_info {
-        width: 50%;
         float: left;
+        width: 50%;
     }
 	#chart {
 		clear: both;
@@ -45,35 +45,35 @@
 	#share {
 		background: white;
         border: 1px solid #777;
+		display: none;
+		left: 0;
 		padding: 0px;
-		z-index: 10;
 		position: absolute;
 		top: 0;
-		left: 0;
-		display: none;
 		width: 320px;
+		z-index: 10;
 	}
 	#share_url {
+		clear: both;
 		margin: 0px 10px 10px 10px;
 		width: 90%;
-		clear: both;
 	}
 	#share_notes {
 		float: left;
 		margin: 10px;
 	}
 	#X {
-		padding: 0px;
-		margin: 0px 5px 0px 0px;
-		text-decoration: none;
 		float: right;
+		margin: 0px 5px 0px 0px;
+		padding: 0px;
+		text-decoration: none;
 	}
 	#x_link {
-		text-decoration: none;
 		color: #777;
 		font-family: sans-serif;
 		font-size: large;
 		text-align: right;
+		text-decoration: none;
 	}
 </style>
 <script type="text/javascript" src='http://maps.googleapis.com/maps/api/js?key=AIzaSyDc3LDO-rPImnz9e4c2KwviMBBRonz9vlk&sensor=false&libraries=drawing,geometry'></script>
@@ -86,7 +86,6 @@ var elevator = null;
 var track = [];
 var segments = [];
 var units = 'miles';
-var start_img, end_img, handle_img, marker_img;
 var elev_marker;
 
 var start_img = new google.maps.MarkerImage(
@@ -120,11 +119,6 @@ function init() {
 			map: map,
 			icon: marker_img 
 		});
-    change_marker = new google.maps.Marker({
-			visible: false,
-			map: map,
-			icon: handle_img 
-		});
 
     google.maps.event.addListener(map, 'click', function (event) {
             add_segment(event);
@@ -149,21 +143,19 @@ function add_segment(event) {
         draggable: true,
         map: map,
         icon: (track.length == 0 ? start_img : end_img)
-        });
+	});
     google.maps.event.addListener(handle, 'drag', drag(track.length));
     google.maps.event.addListener(handle, 'dragend', dragend);
 
     if (track.length > 0) {
-        segment = new google.maps.Polyline({
+        segments.push(new google.maps.Polyline({
             strokeColor: "#000000",
             strokeOpacity: .7,
             strokeWeight: 3,
             map: map,
             path: [track[track.length - 1].getPosition(), event.latLng],
             geodesic: true,
-        });
-		
-        segments.push(segment);
+        }));
     }
     if (track.length > 1)
         track[track.length - 1].setIcon(handle_img);
@@ -173,17 +165,13 @@ function add_segment(event) {
 
 function drag(index) {
     return function () {
-        var neighbor = null;
-        var seg = null;
 
-        if (index > 0) { // if index has a left neighbor
-            seg = segments[index - 1];
+        if (index > 0) { // index has a left neighbor
             segments[index - 1].setPath([track[index - 1].getPosition(),
                 track[index].getPosition()]);
         }
 
-        if (index < track.length - 1) { // if index has a right neighbor
-            seg = segments[index];
+        if (index < track.length - 1) { // index has a right neighbor
             segments[index].setPath([track[index].getPosition(),
                 track[index + 1].getPosition()]);
         }
@@ -213,6 +201,9 @@ function remove_segment(event) {
 }
 
 function plot_elevation(results, status) {
+	if (status != "OK" && status != "OVER_QUERY_LIMIT")
+		alert(status);
+
     if (results == null)
         return;
 
@@ -255,8 +246,10 @@ function update_elevation() {
 }
 
 function update_distance() {
-    if (track == [])
+    if (track == [] || track.length < 2) {
+		document.getElementById("length").innerHTML = "0.00";
         return;
+	}
     var dist = google.maps.geometry.spherical.computeLength(get_latLngs()); 
     document.getElementById("length").innerHTML = unit(dist).toFixed(2);
 }
