--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
-Hello!
+<html>
+<head>
+<style type="text/css">
+html, body, #a {
+height: 100%;
+width: 100%;
+}
+#b {
+position: relative;
+top: 50%;
+left: 50%;
+margin-top: -100px;
+margin-left: -100px;
+width: 200px;
+}
+#c {
+stroke: #000000;
+stroke-width: 0;
+fill: #000000;
+text-anchor: start;
+font-family: Monospace;
+}
+</style>
+</head>
+<title>mattburnside.com</title>
+<body>
+<div id="a">
+<div id="b">
+<svg width="200" height="20" xmlns="http://www.w3.org/2000/svg">
+<defs>
+<filter id="blur">
+<feGaussianBlur stdDeviation="0.8" in="SourceGraphic"/>
+</filter>
+</defs>
+<g>
+<text id="c" filter="url(#blur)" font-size="20" y="16" x="4">
+mattburnside.com
+</text>
+</g>
+</svg>
+</div>
+</div>
+</body>
+</html>
