Load the correct URL for images.

--- a/album/index.html
+++ b/album/index.html
@@ -130,7 +130,7 @@
 </script>
 
 <script type="text/template" id="tmpl-scroll-image">
-    <a href="<%= path %>"><img src="<%= thumb %>"></a>
+    <a href="<%= url %>"><img src="<%= thumb %>"></a>
     <div class="caption"><%= caption %></div>
 </script>
 
