Clean up the list

--- a/album/index.html
+++ b/album/index.html
@@ -19,21 +19,15 @@
     font-style: italic;
 }
 
-#login {
-    float: right;
-    font-size: 10px;
-}
-
-#login input {
-    font-size: 10px;
-    background-color: #2a2a2a;
-    color: #e8e8e8;
-    border: 1px solid #a8a8a8;
-}
-
 #index {
     width: 1024px;
     margin: 0px auto 0px auto;
+}
+
+.list-item {
+    list-style-type: none;
+    margin-left: 10px;
+    margin-top: 10px;
 }
 
 .save {
