--- a/tracks/index.html
+++ b/tracks/index.html
@@ -76,7 +76,7 @@
 		text-decoration: none;
 	}
 </style>
-<script type="text/javascript" src="//maps.googleapis.com/maps/api/js?v=3&key=AIzaSyAHhcuzlRdbTqd2wSqg5fxCG-w8WMgv_HA&sensor=false"></script>
+<script type="text/javascript" src="//maps.googleapis.com/maps/api/js?v=3&key=AIzaSyAHhcuzlRdbTqd2wSqg5fxCG-w8WMgv_HA&sensor=false&libraries=drawing,geometry"></script>
 <script type="text/javascript" src='https://www.google.com/jsapi'></script>
 <script type="text/javascript">
 
