--- a/tracks/index.html
+++ b/tracks/index.html
@@ -411,7 +411,7 @@ function kml() {
 
     var poly = track.map(function (handle) {
 		var pos = handle.getPosition();
-		alert(pos);
+		alert(pos.lat() + " " + pos.lng());
 		return pos.lat().toFixed(4) + "," + pos.lng().toFixed(4) + "\n";
 	});
 
