Correct the style color.

--- a/tracks/index.html
+++ b/tracks/index.html
@@ -399,7 +399,7 @@ function kml() {
  	<description></description>\n\n \
  	<Style id="style1">\n \
  	<LineStyle>\n \
- 		<color>ffffffff</color>\n \
+ 		<color>ffffff</color>\n \
  		<width>e</width>\n \
  	</LineStyle>\n \
  	</Style>\n \
