--- a/tracks/index.html
+++ b/tracks/index.html
@@ -392,7 +392,7 @@ function clear_track() {
 
 
 function kml() {
-	return '<?xml version="1.0" encoding="UTF-8"?>\n \
+	alert( '<?xml version="1.0" encoding="UTF-8"?>\n \
  	<kml xmlns="http://earth.google.com/kml/2.1">\n \
  	<Document>\n \
  	<Placemark>\n \
@@ -410,7 +410,7 @@ function kml() {
 		</LineString>\n \
 	</Placemark>\n \
 	</Document>\n \
-	</kml>';
+	</kml>' );
 }
 
 
