--- a/tracks/index.html
+++ b/tracks/index.html
@@ -421,7 +421,7 @@ function kml() {
 		</LineString>\n \
 	</Placemark>\n \
 	</Document>\n \
-	</kml>' );
+	</kml>';
 
 	var e = document.createElement('a');
 	e.setAttribute('href',
